# nongoose

./: .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  README.md  building-your-first-instance.html  feature-flags.html  nongoose.html  overview.html  print.html  schema-before.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  docs.yml  release.yml
derive/: Cargo.toml
derive/src/: helpers.rs  lib.rs  schema.rs  utils.rs
derive/src/helpers/: document.rs  instance.rs  relations.rs  schema_id.rs  unique_fields.rs
derive/src/schema/: data.rs
derive/src/schema/attributes/: relations.rs
derive/src/utils/: attributes.rs  collection.rs  crates.rs  fields.rs
docs/: book.toml
docs/src/: SUMMARY.md  building-your-first-instance.md  feature-flags.md  nongoose.md  schema-before.md
docs/src/examples/: README.md  aggregate.md  many-to-one-relation.md  one-to-many-relation.md
docs/src/examples/codes/: many-to-one.rs  one-to-many.rs
docs/src/schema/: README.md  using-derive.md
docs/src/schema/attributes/: README.md  container.md  field.md  macro.md
examples/: aggregate.html  index.html  many-to-one-relation.html  many-to-one.rs  one-to-many-relation.html  one-to-many.rs
examples/codes/: aggregate.rs  one-to-many.rs
schema/: index.html  using-derive.html
schema/attributes/: container.html  field.html  index.html  macro.html
scripts/: drop-database  run-async-examples  run-sync-examples
src/: error.rs  errors.rs  lib.rs  nongoose.rs  re_exports.rs  schema.rs
src/nongoose/: builder.rs  globals.rs  options.rs
src/schema/: before.rs  data.rs  types.rs
tests/: aggregate.rs  before.rs  count.rs  find.rs  remove.rs  save.rs  schema_before.rs  schema_remove.rs  schema_save.rs  update_many.rs
