[package]
name = "nongoose"
version = "0.1.0-beta.1"
authors = [
  "Daniel Solarte <contact@danielsolarte.com>"
]
license = "GPL-3.0"
description = "MongoDB ODM for Rust based on Mongoose"
edition = "2018"

[workspace]
members = ["./derive/"]

[dependencies]
async-trait = { optional = true, version = "0.1" }
mongodb = { default-features = false, features = ["bson-chrono-0_4", "bson-uuid-0_8", "sync"], version = "2.0.0-beta.2" }
nongoose-derive = { optional = true, path = "./derive/", version = "0.1.0" }
once_cell = "1"
serde = { features = ["derive"], version = "1" }
thiserror = "1"
tokio = { features = ["macros"], optional = true, version = "1" }

[[example]]
name = "many-to-one"

[features]
default = ["async", "derive"]
async = ["async-trait", "tokio"]
derive = ["nongoose-derive"]
