[package]
name = "nongoose-derive"
version = "0.1.0-beta.2"
authors = [
  "Daniel Solarte <contact@danielsolarte.com>"
]
license = "GPL-3.0"
description = "Macros implementation of #[derive(Schema)]"
edition = "2021"
homepage = "https://nongoose.danielsolarte.com"
documentation = "https://docs.rs/nongoose"
repository = "https://github.com/dsolarte/nongoose"
keywords = ["nongoose"]
include = ["src/**/*.rs", "../COPYING", "../README.md"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "1"
quote = "1.0"
syn = { features = ["extra-traits"], version = "1.0" }
